# moos-ivp-jonbs

./: .gitignore  CMakeLists.txt
missions/alder/: alder.moos
missions/front_estimate/: launch.sh  plug_pFrontEstimate.moos
missions/lab_07/alpha_return/: alpha.moos
missions/lab_07/alpha_return_now/: alpha.moos
missions/lab_09/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pLogger.moos  plug_uTimerScript.moos
missions/lab_17/: lab_explanations.txt
scripts/: kill_n_go.sh
src/: CMakeLists.txt  main.cpp
src/lib_behaviors-test/: .BHV_Pulse.cpp.swp  .BHV_TempGradient.cpp.swp  BHV_Pulse.cpp  BHV_Pulse.h  BHV_TempGradient.cpp  BHV_TempGradient.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/pCommunicationAngle/: CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  CommunicationAngle_Info.cpp  CommunicationAngle_Info.h  main.cpp  pCommunicationAngle.moos
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pGenPath2/: CMakeLists.txt  GenPath2.cpp  GenPath2.h  GenPath2_Info.cpp  GenPath2_Info.h  main.cpp  pGenPath2.moos
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h
src/pPrimeFactor/: CMakeLists.txt  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos  pTest.moos  preTest.moos
src/pXRelayTest/: pXRelayTest.moos
src/uFldHazardMgrX/: HazardMgrX.cpp  HazardMgrX.h  HazardMgrX_Info.cpp
(+50 files in other folders)
